--- a/pkg/rad-0.2.2/History.txt
+++ b/pkg/rad-0.2.2/History.txt
@@ -1,3 +1,14 @@
+== 0.2.3 2008-07-10
+* Manyish updates:
+	- updated servo library to support position parameter
+	- plus:
+	- addition of plugins
+	- latest and greatest lcd libraries for pa and sf
+	- multiple methods 
+	- addition of rad_process and rad_rewrite methods methods
+	- options for :device => servo, button, lcd, 
+	- and many more
+
 == 0.2.2 2008-04-27
 * 2ish updates:
 	- updated makefile template and cli to expect arduino-0011
