--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+== 0.2.5 2008-07-14
+* 1ish large Bastille Day update:
+	- added i2c capability 
+	- added actual Wire library until workaround for os_x file caching is found
+
 == 0.2.4 2008-07-12
 * 1ish large update:
 	- added incredibly primitive tests 
